crates/icydb-core/tests/ui/db/diagnostics_module_private.rs
use icydb_core::db::diagnostics::ExecutionTrace;

fn main() {}
